17) ppp use metric 10 for dgw replace<br>
18) add more workaround for buggy nas<br>
19) Portforward work now<br>
20) MAC/IP/PORT filterd work now<br>
21) pptp/l2tp now work with new corbina bras<br>
22) Get staticroutes and msstatic routes from dhcp server work now<br>
23) WebUI Add watchdog enable/disable function<br>
24) Fix reboot at apply change in ethernet converter mode<br>
25) Fix lldt control in webui<br>
26) Add interface select for macip filter and port forward in WebUI<br>
27) Add 802.11g/n mixed mode and set default<br>
28) Add samba for smb and wins services<br>
29) portforward and ipport filter scripts now reboot at start<br>
30) Content filters based on webstr now works<br>
31) Use WLAN_MAC_ADDR, WAN_MAC_ADDR, LAN_MAC_ADDR variable in nvram for set macs to interfaces<br>
32) STA profiles now works<br>
33) Add netmask for ip filter pages<br>
34) Add asus rt-g32 full support<br>
35) Fix part table in SPI and nand flash types<br>
36) pppd up to current git src 24 Aug 2010<br>
37) xl2tpd up to 1.2.7 version<br>
38) Fix conntrack flush<br>
39) Wireless pages split and optimize<br>
40) VPN page add auth type select<br>
41) Fix trunclate nvram values at aplly change and device mode select<br>
42) Fix restart nvram_daemon<br>
43) Kernel fix lock in mtdchar, more small fixes and cleanups<br>
44) Fix keep mac adresses at push reset button<br>
45) libnvram use mtdblock instead mtdchar for write/read function<br>
46) Fix unlocked kernel write to mtd. Use kernel_lock for fix concurrent write issue<br>
47) Some scripts rewrite<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>
