@@ -235,6 +235,7 @@ if [ "$CONFIG_RT2880_NVRAM" = "n" -a "$CONFIG_USER_GOAHEAD_HTTPD" = "n" ]; then
 	define_bool CONFIG_LIB_LIBNVRAM_FORCE n
 fi
 bool 'RT2880 RALINK INIT'		CONFIG_RT2880_RAINIT
+bool 'RT2880 RALINK NVRAM DAEMON'	CONFIG_RT2880_RADAEMON
 bool 'RT2880 Layer2 Management'		CONFIG_RT2880_L2_MANAGE
 bool 'RT2880 MTD Application'		CONFIG_RT2880_MTD
 bool 'RT2880 GPIO Test'			CONFIG_RT2880_GPIO_TEST
