@@ -148,9 +148,10 @@ CONFIG_RT2880_MII_MGR=y
 CONFIG_RT2880_NVRAM=y
 CONFIG_LIB_LIBNVRAM_FORCE=y
 CONFIG_RT2880_RAINIT=y
+# CONFIG_RT2880_RADAEMON is not set
 CONFIG_RT2880_L2_MANAGE=y
 CONFIG_RT2880_MTD=y
-CONFIG_RT2880_GPIO_TEST=y
+# CONFIG_RT2880_GPIO_TEST is not set
 # CONFIG_RT2880_SPI is not set
 # CONFIG_RT2880_I2C is not set
 CONFIG_RALINKAPP_SWQOS=y
