@@ -1,32 +1,0 @@
-#!/bin/sh
-
-LOG="echo MEMFREE: "
-
-start() {
-
- $LOG "Unload unneeded modules"
-    rmmod -a
-}
-
-stop() {
- $LOG " "
-}
-
-case "$1" in
-	start)
-	    start
-	    ;;
-
-	stop)
-	    stop
-	    ;;
-
-	restart)
-	    stop
-	    start
-	    ;;
-
-	*)
-	    echo $"Usage: $0 {start|stop|restart}"
-	    exit 1
-esac
