@@ -397,9 +397,7 @@ getenv("SERVER_SOFTWARE"));
      * write the current linux version into flash.
      */
     write_flash_kernel_version(filename, file_begin);
-#ifdef CONFIG_RT2880_DRAM_8M
-    system("killall -q goahead");
-#endif
+
     // flash write
     if( mtd_write_firmware(filename, file_begin, file_end - file_begin) == -1){
         printf("mtd_write fatal error! The corrupted image has ruined the flash!!");
