@@ -685,19 +685,15 @@ static int FirmwareUpgradePostASP(int eid, webs_t wp, int argc, char_t **argv)
 	return 0;
 }
 
+void ResetNvram(void)
+{
+        system("fs nvramreset");
+        system("fs restore");
+}
+
 static void LoadDefaultSettings(webs_t wp, char_t *path, char_t *query)
 {
-#if defined (CONFIG_INIC_MII) || defined (CONFIG_INIC_USB) || defined (CONFIG_INIC_PCI)
-	system("ralink_init clear inic");
-        system("ralink_init renew inic /etc/Wireless/RT2860_default_vlan");
-#elif defined (CONFIG_RT2561_AP) || defined (CONFIG_RT2561_AP_MODULE)
-	system("ralink_init clear 2561");
-        system("ralink_init renew 2561 /etc/Wireless/RT2561_default");
-#else
-	system("fs nvramreset");
-#endif
-	
-	system("fs restore");
+    ResetNvram();
 }
 
 #if defined CONFIG_LOGREAD && defined CONFIG_KLOGD
