@@ -127,6 +127,8 @@
 45) libnvram use mtdblock instead mtdchar for write/read function<br>
 46) Fix unlocked kernel write to mtd. Use kernel_lock for fix concurrent write issue<br>
 47) Some scripts rewrite<br>
+48) nvram_daemon and gpio utility no more needed<br>
+49) Add backup dvram to rwfs logic add<br>
 
 <br><br>
 <b>For support see:</b><br>
